<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF6E8"
    android:clipChildren="true"
    android:gravity="center|center_horizontal"
    android:orientation="vertical"
    tools:context=".RecordatoriosActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/recordatorio"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.027" />


    <Button
        android:id="@+id/btnMedicamentos"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:backgroundTint="#A0C5F7"
        android:fontFamily="@font/acme"
        android:text="@string/medicamentos"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.181"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/btnMedicamentos"
        tools:ignore="VisualLintBounds"
        tools:layout_editor_absoluteX="-27dp">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:gravity="center"
            android:text="@string/recordatorios2"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/act"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/acme"
                android:hint="@string/nuevo_recordatorio"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textColorHint="#000000"
                tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

            <TextView
                android:id="@+id/agregaract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mas"
                android:textColor="#032D67"
                android:textSize="30sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ListView
                android:id="@+id/lista"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#D740C4FF"
                android:cacheColorHint="#000000"
                android:scrollbars="vertical"
                ></ListView>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
