<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoapp2"
    tools:context=".MenuActivity">

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="138dp"
        android:layout_height="133dp"
        android:backgroundTint="#F6DDB9"
        android:contentDescription="@string/ejercicios"
        android:onClick="btnModuloMeditacionClick"
        android:tintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@drawable/respirar"
        app:tint="#BC9696" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="152dp"
        android:layout_height="120dp"
        android:backgroundTint="#F6DDB9"
        android:contentDescription="@string/recetas"
        android:onClick="btnModuloRecetasClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691"
        app:srcCompat="@drawable/lec"
        app:tint="#BC9696" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="138dp"
        android:layout_height="119dp"
        android:backgroundTint="#F6DDB9"
        android:contentDescription="@string/recordatorios"
        android:onClick="btnModuloRecordatorioClick"
        app:layout_constraintBottom_toTopOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.896"
        app:srcCompat="@drawable/rec"
        app:tint="#BC9696" />

    <ImageView
        android:id="@+id/imgvPerfil"
        android:layout_width="169dp"
        android:layout_height="159dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.006"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="167dp"
        android:layout_height="24dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="Bienvenido "
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvPerfil"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtvFrase"
        android:layout_width="278dp"
        android:layout_height="83dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:onClick="btnFraseClick"
        android:text="Frase"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.016" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="147dp"
        android:layout_height="127dp"
        android:backgroundTint="#F6DDB9"
        android:contentDescription="@string/sleep"
        android:onClick="btnModuloSueñoClick"
        app:layout_constraintBottom_toTopOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894"
        app:srcCompat="@drawable/durmien"
        app:tint="#BC9696" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="53dp"
        android:layout_height="50dp"
        android:tint="#C09B98"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.662"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        app:srcCompat="@android:drawable/ic_menu_recent_history" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="245dp"
        android:layout_height="42dp"
        android:fontFamily="@font/comfortaa"
        android:gravity="center"
        android:text="Recordatorio"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="Sueño >"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintHorizontal_bias="0.862"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="Recordatorios >"
        android:textColor="#101010"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton2"
        app:layout_constraintEnd_toEndOf="@+id/imageButton2"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="@+id/imageButton2"
        app:layout_constraintTop_toTopOf="@+id/imageButton2"
        app:layout_constraintVertical_bias="0.857" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="Recetas >"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton3"
        app:layout_constraintEnd_toEndOf="@+id/imageButton3"
        app:layout_constraintHorizontal_bias="0.854"
        app:layout_constraintStart_toStartOf="@+id/imageButton3"
        app:layout_constraintTop_toTopOf="@+id/imageButton3"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa"
        android:text="Ejercicios >"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton4"
        app:layout_constraintEnd_toEndOf="@+id/imageButton4"
        app:layout_constraintHorizontal_bias="0.782"
        app:layout_constraintStart_toStartOf="@+id/imageButton4"
        app:layout_constraintTop_toTopOf="@+id/imageButton4"
        app:layout_constraintVertical_bias="0.88" />

</androidx.constraintlayout.widget.ConstraintLayout>